--- a/src/app/material/button/button.component.html
+++ b/src/app/material/button/button.component.html
@@ -1,16 +1,12 @@
 <button class="button" *ngIf="!url" type="{{ type }}" [attr.theme]="theme">
-    <svg-icon
-        *ngIf="iconStatus"
-        [src]="iconStatusUrl[iconStatus]"
-        [attr.class]="iconStatus"
-        [attr.alt]="label"
-    ></svg-icon>
-    <span>
-        {{ label }}
-    </span>
+    <ng-container *ngTemplateOutlet="button"></ng-container>
 </button>
 
 <a class="link" *ngIf="url" [href]="url" target="_blank" [attr.theme]="theme">
+    <ng-container *ngTemplateOutlet="button"></ng-container>
+</a>
+
+<ng-template #button>
     <svg-icon
         *ngIf="iconStatus"
         [src]="iconStatusUrl[iconStatus]"
@@ -20,4 +16,4 @@
     <span>
         {{ label }}
     </span>
-</a>
+</ng-template>
