--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,27 @@
+<div class="footer">
+    <img class="logo" src="/assets/img/logo-white.svg" />
+    <div class="contact-block">
+        <p class="label">Contacto:</p>
+        <a href="mailto:geral@teamloan.pt" class="text">geral@teamloan.pt</a>
+    </div>
+    <ul class="social-links">
+        <li class="item">
+            <a href="https://www.facebook.com/projecteamloan/" target="_blank">
+                <img src="/assets/img/icons/linkedin.svg" alt="linkedin" />
+            </a>
+        </li>
+        <li class="item">
+            <a href="https://www.linkedin.com/company/teamloan" target="_blank">
+                <img src="/assets/img/icons/instagram.svg" alt="instagram" />
+            </a>
+        </li>
+        <li class="item">
+            <a href="https://www.instagram.com/teamloan_/" target="_blank">
+                <img src="/assets/img/icons/facebook.svg" alt="facebook" />
+            </a>
+        </li>
+    </ul>
+</div>
 <div class="tech4covid">
     <a href="https://tech4covid19.org/" target="_blank">
         <img src="/assets/img/logo-tech4covid.svg" />
