--- a/src/assets/scss/core/_fonts.scss
+++ b/src/assets/scss/core/_fonts.scss
@@ -107,3 +107,44 @@
         /* Safari, Android, iOS */
             url('/assets/fonts/roboto-v20-latin/roboto-v20-latin-100.svg#Roboto') format('svg'); /* Legacy iOS */
 }
+
+/* montserrat-regular - latin */
+@font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    src: url('/assets/fonts/montserrat-v14-latin/montserrat-v14-latin-regular.eot'); /* IE9 Compat Modes */
+    src: local('Montserrat Regular'), local('Montserrat-Regular'),
+        url('/assets/fonts/montserrat-v14-latin/montserrat-v14-latin-regular.eot?#iefix')
+            format('embedded-opentype'),
+        /* IE6-IE8 */ url('/assets/fonts/montserrat-v14-latin/montserrat-v14-latin-regular.woff2')
+            format('woff2'),
+        /* Super Modern Browsers */
+            url('/assets/fonts/montserrat-v14-latin/montserrat-v14-latin-regular.woff')
+            format('woff'),
+        /* Modern Browsers */
+            url('/assets/fonts/montserrat-v14-latin/montserrat-v14-latin-regular.ttf')
+            format('truetype'),
+        /* Safari, Android, iOS */
+            url('/assets/fonts/montserrat-v14-latin/montserrat-v14-latin-regular.svg#Montserrat')
+            format('svg'); /* Legacy iOS */
+}
+/* montserrat-700 - latin */
+@font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    src: url('/assets/fonts/montserrat-v14-latin/montserrat-v14-latin-700.eot'); /* IE9 Compat Modes */
+    src: local('Montserrat Bold'), local('Montserrat-Bold'),
+        url('/assets/fonts/montserrat-v14-latin/montserrat-v14-latin-700.eot?#iefix')
+            format('embedded-opentype'),
+        /* IE6-IE8 */ url('/assets/fonts/montserrat-v14-latin/montserrat-v14-latin-700.woff2')
+            format('woff2'),
+        /* Super Modern Browsers */
+            url('/assets/fonts/montserrat-v14-latin/montserrat-v14-latin-700.woff') format('woff'),
+        /* Modern Browsers */ url('/assets/fonts/montserrat-v14-latin/montserrat-v14-latin-700.ttf')
+            format('truetype'),
+        /* Safari, Android, iOS */
+            url('/assets/fonts/montserrat-v14-latin/montserrat-v14-latin-700.svg#Montserrat')
+            format('svg'); /* Legacy iOS */
+}
