--- a/src/app/screens/home-screen/components/section-partners/section-partners.component.html
+++ b/src/app/screens/home-screen/components/section-partners/section-partners.component.html
@@ -4,34 +4,9 @@
     <div class="icons-container">
         <img class="background-lines" src="/assets/img/home/partners-background-lines.svg" />
         <ul class="icons-list">
-            <li class="item">
-                <a
-                    href="https://madeoflisboa.com"
-                    target="_blank"
-                    class="item-info"
-                    title="Made of Lisboa | Official Lisbon's Entrepreneur Community'"
-                >
-                    <img class="icon" src="/assets/img/logos/cmlisboa.svg" />
-                </a>
-            </li>
-            <li class="item">
-                <a
-                    href="http://www.acbraga.pt"
-                    target="_blank"
-                    class="item-info"
-                    title="Associação Comercial de Braga"
-                >
-                    <img class="icon" src="/assets/img/logos/acb.svg" />
-                </a>
-            </li>
-            <li class="item">
-                <a
-                    href="https://www.nestportugal.pt"
-                    target="_blank"
-                    class="item-info"
-                    title="NEST - Centro de inovação do turismo"
-                >
-                    <img class="icon" src="/assets/img/logos/nest.svg" />
+            <li class="item" *ngFor="let partner of partners">
+                <a [href]="partner.href" target="_blank" class="item-info" [title]="partner.title">
+                    <img class="icon" [src]="partner.src" />
                 </a>
             </li>
         </ul>
