--- a/src/assets/scss/_core.scss
+++ b/src/assets/scss/_core.scss
@@ -1,3 +1,5 @@
+@import 'bulma/sass/utilities/_all';
+@import 'bulma/sass/grid/columns';
 @import 'core/variables';
 @import 'core/layout';
 @import 'core/fonts';
