--- a/src/assets/scss/core/_color-palette.scss
+++ b/src/assets/scss/core/_color-palette.scss
@@ -5,6 +5,7 @@ $color-palette: (
     color-cosmic: #663366,
     color-bittersweet: #ff6666,
     color-mine-shaft: #333333,
+    color-nobel: #b3b3b3
 );
 :root {
     @each $color-name, $color-value in $color-palette {
