--- a/src/app/material/utils/input-base.scss
+++ b/src/app/material/utils/input-base.scss
@@ -5,7 +5,7 @@
 }
 
 .input-field {
-    @include font-style();
+    @include main-font-style();
     width: 100%;
     padding: 0 20px;
     border-radius: 10px;
