--- a/src/app/material/utils/mixins.scss
+++ b/src/app/material/utils/mixins.scss
@@ -1,7 +1,7 @@
 @import 'bulma/sass/utilities/_all';
 @import 'bulma/sass/components/_all';
 
-@mixin font-style {
+@mixin main-font-style {
     font-family: Work Sans;
     font-style: normal;
     font-weight: normal;
