--- a/src/app/material/button/button.component.scss
+++ b/src/app/material/button/button.component.scss
@@ -1,3 +1,7 @@
+:host {
+    display: flex;
+}
+
 .button,
 .link {
     display: flex;
@@ -12,6 +16,7 @@
     border-radius: 10px;
     outline: none;
     cursor: pointer;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
     svg-icon {
         display: flex;
@@ -51,7 +56,6 @@
     &[theme='main'] {
         background-color: var(--color-bittersweet);
         color: var(--color-white);
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
         svg-icon {
             fill: var(--color-white);
