--- a/src/app/screens/home-screen/home-screen.component.html
+++ b/src/app/screens/home-screen/home-screen.component.html
@@ -1,3 +1,6 @@
+<a [routerLink]="'login'">LOGIN</a>
+<br />
+<a [routerLink]="'logout'">LOGOUT</a>
 <app-section-intro></app-section-intro>
 <app-section-about></app-section-about>
 <app-section-lender></app-section-lender>
