register screen background

--- a/src/app/screens/register/components/company-form/company-form.component.html
+++ b/src/app/screens/register/components/company-form/company-form.component.html
@@ -1,5 +1,5 @@
 <div class="form-section">
-    <p class="title">Dados da empresa</p>
+    <p class="form-title">Dados da empresa</p>
 
     <div class="inputs-container" [formGroup]="form">
         <app-input-text
