--- a/src/app/screens/register/components/user-form/user-form.component.html
+++ b/src/app/screens/register/components/user-form/user-form.component.html
@@ -1,5 +1,5 @@
 <div class="form-section">
-    <p class="title">Dados do representante</p>
+    <p class="form-title">Dados do representante</p>
 
     <div class="inputs-container" [formGroup]="form">
 
