--- a/src/app/screens/register/register-screen.component.html
+++ b/src/app/screens/register/register-screen.component.html
@@ -1,4 +1,9 @@
-<app-register-form 
-    (submitEvent)="onSubmit($event)"
-    [businessAreas]="businessAreaOptions">
-</app-register-form>
+<h1 class="title">Registro</h1>
+
+<div class="register-form-container">
+    <app-register-form 
+        (submitEvent)="onSubmit($event)"
+        [businessAreas]="businessAreaOptions">
+    </app-register-form>
+</div>
+
