--- a/src/assets/scss/forms/form.scss
+++ b/src/assets/scss/forms/form.scss
@@ -1,7 +1,7 @@
 .form-section {
     padding: 20px;
 
-    .title {
+    .form-title {
         font-size: 24px;
         font-family: 'Work Sans';
         font-weight: 400;
