updating filter toolbar component and changing the buttons height property to min-height

--- a/src/app/components/filter-toolbar/filter-toolbar.component.html
+++ b/src/app/components/filter-toolbar/filter-toolbar.component.html
@@ -1,58 +1,57 @@
 <form class="filter-toolbar-container" [formGroup]="form">
-    <div class="columns is-desktop">
-        <div class="column"></div>
-        <div class="column">
-            <app-button
-                label="Equipas disponíveis"
-                [iconStatus]=""
-                (click)="onIntentChange(intent.SEEKER)"
-                class="button-submit"
-                [theme]="seekerTheme"
-            ></app-button>
+    <div class="buttons-container">
+        <div class="columns">
+            <div class="column">
+                <app-button
+                    label="Equipas disponíveis"
+                    [iconStatus]=""
+                    (click)="onIntentChange(intent.SEEKER)"
+                    [theme]="seekerTheme"
+                ></app-button>
+            </div>
         </div>
-        <div class="column"></div>
-    </div>
-    <div class="columns is-desktop">
-        <div class="column"></div>
-        <div class="column">
-            <app-button
-                label="Pedidos de equipas"
-                [iconStatus]=""
-                (click)="onIntentChange(intent.LENDER)"
-                class="button-submit"
-                [theme]="lenderTheme"
-            ></app-button>
+        <div class="columns">
+            <div class="column">
+                <app-button
+                    label="Pedidos de equipas"
+                    [iconStatus]=""
+                    (click)="onIntentChange(intent.LENDER)"
+                    [theme]="lenderTheme"
+                ></app-button>
+            </div>
         </div>
-        <div class="column"></div>
     </div>
     <hr />
     <div class="form-fields">
-        <fieldset class="field-container">
-            <label class="label" for="sector">Sector</label>
-            <app-input-select
-                class="column"
-                formControlName="sector"
-                [inputSelectOptions]="sectorOptions"
-                placeholder="Todos"
-            ></app-input-select>
-        </fieldset>
-        <fieldset class="field-container">
-            <label class="label" for="location">Localização</label>
-            <app-input-select
-                class="column"
-                formControlName="location"
-                [inputSelectOptions]="locationOptions"
-                placeholder="Todas"
-            ></app-input-select>
-        </fieldset>
-        <fieldset class="field-container">
-            <label class="label" for="function">Função</label>
-            <app-input-select
-                class="column"
-                formControlName="function"
-                [inputSelectOptions]="functionOptions"
-                placeholder="Todas"
-            ></app-input-select>
-        </fieldset>
+        <div *ngIf="sectorOptions.length !== 0" class="columns">
+            <fieldset class="column">
+                <label class="label" for="sector">Sector</label>
+                <app-input-select
+                    formControlName="sector"
+                    [inputSelectOptions]="sectorOptions"
+                    placeholder="Todos"
+                ></app-input-select>
+            </fieldset>
+        </div>
+        <div *ngIf="locationOptions.length !== 0" class="columns">
+            <fieldset class="column">
+                <label class="label" for="location">Localização</label>
+                <app-input-select
+                    formControlName="location"
+                    [inputSelectOptions]="locationOptions"
+                    placeholder="Todas"
+                ></app-input-select>
+            </fieldset>
+        </div>
+        <div *ngIf="functionOptions.length !== 0" class="columns">
+            <fieldset class="column">
+                <label class="label" for="function">Função</label>
+                <app-input-select
+                    formControlName="function"
+                    [inputSelectOptions]="functionOptions"
+                    placeholder="Todas"
+                ></app-input-select>
+            </fieldset>
+        </div>
     </div>
 </form>
