--- a/src/app/material/button/button.component.scss
+++ b/src/app/material/button/button.component.scss
@@ -91,7 +91,7 @@
     }
 
     @media all and (max-width: 899px) {
-        height: 50px;
+        min-height: 50px;
         font-size: 17px;
         line-height: 28px;
 
@@ -102,7 +102,7 @@
     }
 
     @media all and (min-width: 900px) {
-        height: 77px;
+        min-height: 77px;
         font-size: 36px;
         line-height: 42px;
     }
