--- a/src/app/screens/home-screen/components/home-screen.component.html
+++ b/src/app/screens/home-screen/components/home-screen.component.html
@@ -1,6 +1,8 @@
 <a [routerLink]="'login'">LOGIN</a>
 <br />
 <a [routerLink]="'logout'">LOGOUT</a>
+<br />
+<a [routerLink]="'register'">REGISTO</a>
 <app-section-intro></app-section-intro>
 <app-section-about></app-section-about>
 <app-section-lender></app-section-lender>
