--- a/src/assets/scss/core/_fonts.scss
+++ b/src/assets/scss/core/_fonts.scss
@@ -1,4 +1,20 @@
-// @import url('https://fonts.googleapis.com/css?family=Work+Sans:400,700&display=swap');
+/* work-sans-100 - latin */
+@font-face {
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 100;
+    src: url('/assets/fonts/work-sans/work-sans-thin.ttf');
+    src: local(''), url('/assets/fonts/work-sans/work-sans-thin.ttf'), format('truetype');
+}
+
+/* work-sans-300 - latin */
+@font-face {
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 300;
+    src: url('/assets/fonts/work-sans/work-sans-light.ttf');
+    src: local(''), url('/assets/fonts/work-sans/work-sans-light.ttf') format('truetype');
+}
 
 /* work-sans-extra-light - latin */
 @font-face {
@@ -22,14 +38,49 @@
             format('truetype');
 }
 
+/* work-sans-500 - latin */
+@font-face {
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 500;
+    src: url('/assets/fonts/work-sans/work-sans-medium.ttf');
+    src: local(''), url('/assets/fonts/work-sans/work-sans-medium.ttf') format('truetype');
+}
+
+/* work-sans-600 - latin */
+@font-face {
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 600;
+    src: url('/assets/fonts/work-sans/work-sans-semi-bold.ttf');
+    src: local(''), url('/assets/fonts/work-sans/work-sans-semi-bold.ttf') format('truetype');
+}
+
 /* work-sans-700 - latin */
 @font-face {
     font-family: 'Work Sans';
     font-style: normal;
     font-weight: 700;
     src: url('/assets/fonts/work-sans/work-sans-bold.ttf'); /* IE9 Compat Modes */
-    src: local(''),
-        /* Modern Browsers */ url('/assets/fonts/work-sans/work-sans-bold.ttf') format('truetype');
+    src: local(''), url('/assets/fonts/work-sans/work-sans-bold.ttf') format('truetype');
+}
+
+/* work-sans-800 - latin */
+@font-face {
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 800;
+    src: url('/assets/fonts/work-sans/work-sans-extra-bold.ttf');
+    src: local(''), url('/assets/fonts/work-sans/work-sans-extra-bold.ttf') format('truetype');
+}
+
+/* work-sans-900 - latin */
+@font-face {
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 900;
+    src: url('/assets/fonts/work-sans/work-sans-black.ttf');
+    src: local(''), url('/assets/fonts/work-sans/work-sans-black.ttf') format('truetype');
 }
 
 /* roboto-regular - latin */
