--- a/src/app/material/input-select/input-select.component.scss
+++ b/src/app/material/input-select/input-select.component.scss
@@ -1,12 +1,21 @@
 @import '../utils/mixins.scss';
 
-$itemHeightTablet: 50px;
+$itemHeightTablet: 35px;
 $itemHeightMobile: 40px;
 $maxItems: 5;
 
 .dropdown {
     display: flex;
     flex: 1;
+    position: relative;
+
+    &.is-active {
+        .arrow {
+            -webkit-transform: rotate(180deg);
+            -ms-transform: rotate(180deg);
+            transform: rotate(180deg);
+        }
+    }
 }
 
 .input-container {
@@ -55,40 +64,87 @@ $maxItems: 5;
     }
 }
 
-.dropdown.is-active {
-    svg-icon {
-        -webkit-transform: rotate(180deg);
-        -ms-transform: rotate(180deg);
-        transform: rotate(180deg);
+select {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 40px;
+    z-index: 1;
+    opacity: 0;
+
+    @include tablet {
+        display: none;
+    }
+}
+
+.dropdown.is-active .dropdown-menu {
+    @include mobile {
+        display: none;
     }
 }
 
 .dropdown-menu {
     width: 100%;
-    max-height: calc(#{$itemHeightTablet} * #{$maxItems});
-    overflow-y: auto;
     padding: 0;
+    border: 1px solid var(--color-cosmic);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    overflow: hidden;
+    background-color: var(--color-white);
 
-    .dropdown-content {
-        padding: 0;
+    .search-box-container {
+        display: flex;
+        align-items: center;
+        height: 39px;
+        border-bottom: 1px solid var(--color-cosmic);
+        margin: 0 10px;
+        padding-left: 15px;
+
+        .search {
+            width: 25px;
+            height: 25px;
+            display: flex;
+        }
+
+        .search-box {
+            @include main-font-style();
+            width: 100%;
+            border: none;
+            border-left: 1px solid var(--color-black);
+            padding: 0 10px;
+            margin-left: 10px;
+            outline: none;
+            font-size: 18px;
+            line-height: 21px;
+            color: var(--color-black);
+        }
     }
 
-    .search-box {
-        @include main-font-style();
-        width: 100%;
-        height: $itemHeightTablet;
-        border: none;
-        border-bottom: 1px solid var(--color-cosmic);
+    .dropdown-content {
+        max-height: calc(#{$itemHeightTablet} * #{$maxItems});
+        overflow-y: auto;
+        padding: 0;
+        border-radius: 0;
+
+        .dropdown {
+            display: flex;
+            flex-direction: column;
+        }
     }
 
     .dropdown-item {
         @include main-font-style();
         display: flex;
         align-items: center;
+        font-size: 18px;
+        line-height: 21px;
+        color: var(--color-black);
         height: $itemHeightTablet;
+        padding: 10px;
         cursor: pointer;
 
-        &:hover:not(.search-box-container),
+        &:hover,
         &.selected {
             background-color: var(--color-cosmic);
             color: var(--color-white);
