--- a/src/app/screens/home-screen/components/section-partners/section-partners.component.html
+++ b/src/app/screens/home-screen/components/section-partners/section-partners.component.html
@@ -18,6 +18,8 @@
         url="/assets/docs/teamloan-presentation.pdf"
         label="Clique aqui para consultar a apresentação"
         [theme]="buttonTheme"
+        [newPageUrl]="true"
+        [externalUrl]="true"
         class="presentation-link"
     ></app-button>
 </div>
