--- a/src/app/screens/login-screen/component/login-screen.component.html
+++ b/src/app/screens/login-screen/component/login-screen.component.html
@@ -34,10 +34,15 @@
     <a class="forgot-password">Esqueceu-se da password?</a>
 
     <div class="buttons-container">
-        <app-button label="Entrar" type="submit" class="button-submit"></app-button>
+        <app-button
+            label="Entrar"
+            type="submit"
+            [iconStatus]="submitting && buttonStatus"
+            class="button-submit"
+        ></app-button>
         <app-button
             label="Registar"
-            type="submit"
+            url="/register"
             [theme]="buttonTheme.SECUNDARY"
             class="button-registration"
         ></app-button>
