--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -7,17 +7,17 @@
     <ul class="social-links">
         <li class="item">
             <a href="https://www.linkedin.com/company/teamloan" target="_blank">
-                <img src="/assets/img/icons/linkedin.svg" alt="linkedin" />
+                <svg-icon src="/assets/img/icons/linkedin.svg"></svg-icon>
             </a>
         </li>
         <li class="item">
             <a href="https://www.instagram.com/teamloan_/" target="_blank">
-                <img src="/assets/img/icons/instagram.svg" alt="instagram" />
+                <svg-icon src="/assets/img/icons/instagram.svg"></svg-icon>
             </a>
         </li>
         <li class="item">
             <a href="https://www.facebook.com/projecteamloan/" target="_blank">
-                <img src="/assets/img/icons/facebook.svg" alt="facebook" />
+                <svg-icon src="/assets/img/icons/facebook.svg"></svg-icon>
             </a>
         </li>
     </ul>
