--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- <app-cookies-notice></app-cookies-notice> -->
+<app-header></app-header>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
