--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -21,6 +21,11 @@
 
     .social-links {
         display: flex;
+
+        svg-icon {
+            display: flex;
+            fill: var(--color-white);
+        }
     }
 }
 
@@ -57,6 +62,11 @@
 
             .item {
                 margin: 10px;
+            }
+
+            svg-icon {
+                width: 38px;
+                height: 38px;
             }
         }
     }
@@ -103,6 +113,11 @@
                 img {
                     width: 60px;
                 }
+            }
+
+            svg-icon {
+                width: 60px;
+                height: 60px;
             }
         }
     }
