--- a/src/assets/scss/core/_variables.scss
+++ b/src/assets/scss/core/_variables.scss
@@ -3,3 +3,7 @@ $tablet: 769px;
 $desktop: 1024px;
 $widescreen: 1216px;
 $fullhd: 1408px;
+
+$headerDesktopHeight: 125px;
+$headerDesktopSmallHeight: 69px;
+$headerMobileHeight: 85px;
