--- a/src/app/screens/home-screen/components/section-partners/section-partners.component.scss
+++ b/src/app/screens/home-screen/components/section-partners/section-partners.component.scss
@@ -97,6 +97,8 @@
         }
 
         .info-container {
+            align-items: center;
+
             .icons-container {
                 max-width: 1000px;
                 justify-content: flex-end;
