--- a/src/app/material/button/button.component.scss
+++ b/src/app/material/button/button.component.scss
@@ -94,7 +94,7 @@
         }
     }
 
-    @media all and (max-width: 899px) {
+    @include mobile {
         height: 50px;
         font-size: 17px;
         line-height: 28px;
@@ -105,7 +105,13 @@
         }
     }
 
-    @media all and (min-width: 900px) {
+    @include tablet {
+        height: 77px;
+        font-size: 34px;
+        line-height: 48px;
+    }
+
+    @include desktop {
         height: 77px;
         font-size: 36px;
         line-height: 42px;
