--- a/src/app/screens/home-screen/components/section-intro/section-intro.component.scss
+++ b/src/app/screens/home-screen/components/section-intro/section-intro.component.scss
@@ -1,18 +1,41 @@
+@import 'bulma/sass/utilities/_all';
+@import 'src/assets/scss/core/_variables';
+
 :host {
     display: flex;
     justify-content: center;
     align-items: center;
     background-image: url('/assets/img/home/intro-background.jpg');
     background-size: cover;
-
     position: relative;
+
+    @include tablet {
+        min-height: calc(100vh - #{$headerDesktopHeight});
+        height: 100%;
+    }
 }
 
 .background-lines {
     position: absolute;
     z-index: 0;
-    top: 0;
-    right: 0;
+
+    @include mobile {
+        top: 24px;
+        right: 22px;
+        width: 205px;
+    }
+
+    @include tablet {
+        top: 40px;
+        right: 50px;
+        width: 530px;
+    }
+
+    @include desktop {
+        top: 40px;
+        right: 50px;
+        width: 792px;
+    }
 }
 
 .logo-container {
@@ -20,6 +43,29 @@
     z-index: 0;
     top: 0;
     left: 0;
+
+    @include mobile {
+        top: 41px;
+        left: 26px;
+
+        .logo {
+            width: 78px;
+        }
+    }
+
+    @include tablet {
+        top: 97px;
+        left: 100px;
+
+        .logo {
+            width: 200px;
+        }
+    }
+
+    @include desktop {
+        top: 97px;
+        left: 100px;
+    }
 }
 
 .intro-container {
@@ -27,6 +73,14 @@
     flex: 1;
     flex-direction: column;
     position: relative;
+
+    @include mobile {
+        margin: 110px 32px 25px 32px;
+    }
+
+    @include tablet {
+        margin: 300px 100px 50px 100px;
+    }
 
     .content-container {
         display: flex;
@@ -36,12 +90,45 @@
 }
 
 .info-container {
-    .title {
+    @include mobile {
+        margin-bottom: 22px;
+    }
+
+    @include tablet {
+        max-width: 1105px;
+        margin-bottom: 75px;
+    }
+
+    .intro-title {
         font-family: Work Sans;
         font-style: normal;
         font-weight: bold;
         text-transform: uppercase;
         color: var(--color-white);
+        text-align: left;
+
+        @include mobile {
+            width: 100%;
+            font-size: 30px;
+            line-height: 35px;
+            margin: 0;
+        }
+
+        @include tablet {
+            width: 100%;
+            font-size: 40px;
+            line-height: 48px;
+            padding: 0 10px;
+            margin: 0;
+        }
+
+        @include desktop {
+            width: 100%;
+            font-size: 50px;
+            line-height: 70px;
+            padding: 0 10px;
+            margin: 0;
+        }
     }
 
     .subtitle {
@@ -50,199 +137,58 @@
         font-weight: bold;
         text-transform: uppercase;
         color: var(--color-white);
-    }
-}
 
-.prospect {
-    display: flex;
-    flex-direction: column;
-
-    label {
-        display: flex;
-        justify-content: center;
-        font-family: Roboto;
-        font-style: normal;
-        font-weight: normal;
-        color: var(--color-white);
-    }
-
-    .input-container {
-        display: flex;
-        align-items: center;
-
-        .input-email {
-            border: 1px solid var(--color-cosmic);
-            border-radius: 10px;
-            outline: none;
-            font-family: Roboto;
-            font-style: normal;
-            font-weight: normal;
-            color: var(--color-dove-gray);
-
-            &::-webkit-input-placeholder {
-                color: var(--color-dove-gray);
-            }
-            &::-moz-placeholder {
-                color: var(--color-dove-gray);
-            }
-            &:-ms-input-placeholder {
-                color: var(--color-dove-gray);
-            }
-            &:-moz-placeholder {
-                color: var(--color-dove-gray);
-            }
-        }
-    }
-}
-
-@media all and (max-width: 899px) {
-    .background-lines {
-        top: 24px;
-        right: 22px;
-        width: 205px;
-        height: 130px;
-    }
-
-    .logo-container {
-        top: 41px;
-        left: 26px;
-
-        .logo {
-            width: 78px;
-            height: 53px;
-        }
-    }
-
-    .intro-container {
-        margin: 110px 32px 25px 32px;
-    }
-
-    .info-container {
-        margin-bottom: 22px;
-
-        .title {
-            width: 100%;
-            font-size: 30px;
-            line-height: 35px;
-            margin-bottom: 22px;
-        }
-
-        .subtitle {
+        @include mobile {
             font-size: 22px;
             line-height: 26px;
         }
-    }
 
-    .prospect {
-        width: 306px;
-
-        label {
-            font-size: 14px;
-            line-height: 16px;
-        }
-
-        .input-container {
-            flex-direction: column;
-
-            .input-email {
-                width: 100%;
-                height: 55px;
-                padding: 0 13px;
-                font-size: 14px;
-                line-height: 16px;
-                margin: 10px 20px 20px 20px;
-            }
-
-            .button-submit {
-                ::ng-deep {
-                    .button {
-                        width: 217px;
-                    }
-                }
-            }
-        }
-    }
-}
-
-@media all and (min-width: 900px) {
-    :host {
-        min-height: 100vh;
-        height: 100%;
-    }
-
-    .background-lines {
-        top: 100px;
-        right: 50px;
-    }
-
-    .logo-container {
-        top: 157px;
-        left: 100px;
-    }
-
-    .intro-container {
-        margin: 417px 100px 20px 100px;
-    }
-
-    .info-container {
-        max-width: 1105px;
-        margin-bottom: 75px;
-
-        .title {
-            width: 100%;
-            font-size: 50px;
-            line-height: 70px;
-            margin-bottom: 52px;
-            padding: 0 10px;
-        }
-
-        .subtitle {
+        @include tablet {
             font-size: 40px;
             line-height: 55px;
         }
     }
+}
 
-    .prospect {
-        label {
-            max-width: 577px;
-            font-size: 24px;
-            line-height: 28px;
+.auth-actions {
+    display: flex;
+    width: 100%;
+
+    @include mobile {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    @include tablet {
+        justify-content: center;
+    }
+
+    app-button {
+        @include mobile {
+            width: 180px;
+
+            &:first-child {
+                margin-bottom: 30px;
+            }
         }
 
-        .input-container {
-            flex-direction: column;
-            margin-bottom: 10px;
+        @include tablet {
+            max-width: 397px;
 
-            .input-email {
-                width: 577px;
-                height: 64px;
-                padding: 6px 25px;
-                font-size: 24px;
-                line-height: 28px;
-                margin: 10px 20px;
+            &:first-child {
+                margin-right: 30px;
             }
+        }
 
-            .button-submit {
-                ::ng-deep {
-                    .button {
-                        width: 387px;
-                        min-width: 387px;
-                        height: 92px;
-                    }
-                }
+        @include desktop {
+            &:first-child {
+                margin-right: 143px;
             }
         }
     }
 }
 
-@media all and (min-width: 1064px) {
-    .prospect {
-        .input-container {
-            flex-direction: row;
-
-            .input-email {
-                margin-right: 50px;
-            }
-        }
-    }
+@include mobile {
+}
+@include tablet {
 }
