--- a/src/app/screens/material-screen/material-screen.component.html
+++ b/src/app/screens/material-screen/material-screen.component.html
@@ -69,13 +69,7 @@
     <div>
         <div style="width: 372px;">
             <div class="columns is-desktop">
-                <app-post-card
-                    cover="/assets/img/post-card/bg-idanha-a-nova.svg"
-                    title="Idanha-a-nova"
-                    amount="7"
-                    subTitle="Hoterlaria"
-                    [actions]="actions"
-                ></app-post-card>
+                <app-post-card [postCard]="postCard" [actions]="actions"></app-post-card>
             </div>
         </div>
     </div>
