--- a/src/app/screens/posts-list-screen/components/posts-list-screen.component.html
+++ b/src/app/screens/posts-list-screen/components/posts-list-screen.component.html
@@ -1,13 +1,1 @@
-<div class="posts-list">
-    <div class="columns is-desktop is-multiline">
-        <div *ngFor="let post of postsList" class="column">
-            <app-post-card
-                [cover]="post.cover"
-                [title]="post.title"
-                [amount]="post.amount"
-                [subTitle]="post.subTitle"
-                [actions]="actions"
-            ></app-post-card>
-        </div>
-    </div>
-</div>
+<app-posts-list [posts]="posts" [actions]="actions"></app-posts-list>
