updating CSS and HTML

--- a/src/app/material/filter-toolbar/filter-toolbar.component.html
+++ b/src/app/material/filter-toolbar/filter-toolbar.component.html
@@ -1,30 +1,46 @@
 <form class="filter-toolbar-container" [formGroup]="form">
-    <div class="buttons-container">
-        <div class="columns">
-            <div class="column">
-                <app-button
-                    label="Equipas disponíveis"
-                    [iconStatus]=""
-                    (click)="onIntentChange(intent.SEEKER)"
-                    [theme]="seekerTheme"
-                ></app-button>
-            </div>
+    <div class="filter-container" *ngIf="intentToggle">
+        <app-button
+            class="filter-component"
+            label="Equipas disponíveis"
+            [iconStatus]=""
+            (click)="onIntentChange(postsIntent.LEND)"
+            [theme]="lendTheme"
+        ></app-button>
+        <app-button
+            class="filter-component"
+            label="Pedidos de equipas"
+            [iconStatus]=""
+            (click)="onIntentChange(postsIntent.SEEK)"
+            [theme]="seekTheme"
+        ></app-button>
+    </div>
+    <hr *ngIf="intentToggle" />
+    <div class="filter-container">
+        <div *ngIf="districtOptions.length !== 0" class="filter-component">
+            <fieldset>
+                <label class="label" for="district">Distrito</label>
+                <app-input-select
+                    formControlName="district"
+                    [inputSelectOptions]="districtOptions"
+                    placeholder="Todos"
+                ></app-input-select>
+            </fieldset>
         </div>
-        <div class="columns">
-            <div class="column">
-                <app-button
-                    label="Pedidos de equipas"
-                    [iconStatus]=""
-                    (click)="onIntentChange(intent.LENDER)"
-                    [theme]="lenderTheme"
-                ></app-button>
-            </div>
+        <div *ngIf="municipalityOptions.length !== 0" class="filter-component">
+            <fieldset>
+                <label class="label" for="municipality">Município</label>
+                <app-input-select
+                    formControlName="municipality"
+                    [inputSelectOptions]="municipalityOptions"
+                    placeholder="Todos"
+                ></app-input-select>
+            </fieldset>
         </div>
     </div>
-    <hr />
-    <div class="form-fields">
-        <div *ngIf="sectorOptions.length !== 0" class="columns">
-            <fieldset class="column">
+    <div class="filter-container">
+        <div *ngIf="sectorOptions.length !== 0" class="filter-component">
+            <fieldset>
                 <label class="label" for="sector">Sector</label>
                 <app-input-select
                     formControlName="sector"
@@ -33,18 +49,8 @@
                 ></app-input-select>
             </fieldset>
         </div>
-        <div *ngIf="locationOptions.length !== 0" class="columns">
-            <fieldset class="column">
-                <label class="label" for="location">Localização</label>
-                <app-input-select
-                    formControlName="location"
-                    [inputSelectOptions]="locationOptions"
-                    placeholder="Todas"
-                ></app-input-select>
-            </fieldset>
-        </div>
-        <div *ngIf="functionOptions.length !== 0" class="columns">
-            <fieldset class="column">
+        <div *ngIf="functionOptions.length !== 0" class="filter-component">
+            <fieldset>
                 <label class="label" for="function">Função</label>
                 <app-input-select
                     formControlName="function"
