--- a/src/app/material/filter-toolbar/filter-toolbar.component.scss
+++ b/src/app/material/filter-toolbar/filter-toolbar.component.scss
@@ -1,24 +1,41 @@
 @import 'bulma/sass/utilities/_all';
-@import 'bulma/sass/components/_all';
-
 :host {
     @include tablet {
         min-height: 100vh;
     }
-}
 
-.filter-toolbar-container {
-    border-color: var(--color-bittersweet);
-    border-radius: 10px;
-    outline: none;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    background-color: var(--color-white);
-}
+    .filter-toolbar-container {
+        border-color: var(--color-bittersweet);
+        border-radius: 10px;
+        outline: none;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        background-color: var(--color-white);
 
-.buttons-container {
-    margin: 30px;
-}
+        .filter-container {
+            display: flex;
+            justify-content: center;
 
+            @include tablet {
+                flex-direction: column;
+            }
+
+            .filter-component {
+                padding: 0.75rem;
+                width: 100%;
+            }
+
+            @include tablet {
+                app-button.filter-component {
+                    padding: 0.75rem 15%;
+                }
+            }
+
+            hr {
+                width: 100%;
+            }
+        }
+    }
+}
 .form-fields {
     margin: 30px;
 }
