--- a/src/app/screens/login-screen/component/login-screen.component.html
+++ b/src/app/screens/login-screen/component/login-screen.component.html
@@ -21,6 +21,7 @@
                 formControlName="password"
                 type="password"
                 name="password"
+                placeholder="Password"
             ></app-input-text>
             <div *ngIf="submitted && passwordControl?.errors?.required" class="error-message">
                 Campo obrigatório
