--- a/src/app/screens/confirmation-screen/confirmation-screen.component.html
+++ b/src/app/screens/confirmation-screen/confirmation-screen.component.html
@@ -1,4 +1,4 @@
-<h1 class="title">Registo</h1>
+<h1 class="title">Registar</h1>
 <div class="confirm-container">
     <div class="header-section">
         <img src="/assets/img/icons/like-confirmation.svg" alt="like-confirmation" />
@@ -15,7 +15,12 @@
     </div>
     <div class="footer-section">
         <div class="btn-wrapper">
-            <app-button label="Entrar" type="submit" class="button-submit" routerLink="/login"></app-button>
+            <app-button
+                label="Entrar"
+                type="submit"
+                class="button-submit"
+                routerLink="/login"
+            ></app-button>
         </div>
     </div>
 </div>
