--- a/src/app/screens/register/register-screen.component.html
+++ b/src/app/screens/register/register-screen.component.html
@@ -1,9 +1,6 @@
-<h1 class="title">Registro</h1>
+<h1 class="title">Registar</h1>
 
 <div class="register-form-container">
-    <app-register-form 
-        (submitEvent)="onSubmit($event)"
-        [businessAreas]="businessAreaOptions">
+    <app-register-form (submitEvent)="onSubmit($event)" [businessAreas]="businessAreaOptions">
     </app-register-form>
 </div>
-
