--- a/src/app/screens/reset-password-screen/component/reset-password-screen.component.html
+++ b/src/app/screens/reset-password-screen/component/reset-password-screen.component.html
@@ -1,4 +1,4 @@
-<form class="reset-password-container" [formGroup]="form" (submit)="onSubmit()">
+<form class="reset-password-container" [formGroup]="form" (submit)="onSubmit($event)">
     <h1 class="title">Recuperar password</h1>
 
     <div class="form-fields">
