renaming reset to request password

--- a/src/app/screens/login-screen/component/login-screen.component.html
+++ b/src/app/screens/login-screen/component/login-screen.component.html
@@ -32,7 +32,7 @@
         </fieldset>
     </div>
 
-    <a class="forgot-password" href="#/reset-password">Esqueceu-se da password?</a>
+    <a class="forgot-password" href="#/request-password">Esqueceu-se da password?</a>
 
     <div class="buttons-container">
         <app-button
